--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "sls offline start --port 8080",
-    "db": "sls dynamodb install",
+    "dbInstall": "sls dynamodb install",
+    "dbStart": "sls dynamodb start --migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
