--- a/serverless.yml
+++ b/serverless.yml
@@ -7,13 +7,15 @@ provider:
   runtime: nodejs6.10
 
   stage: dev
+  profile: default
   region: us-east-1
   memorySize: 128
-  timeoue: 6
+  timeout: 6
   versionFunctions: true
 
-  environment:
-    MAILGUN_API_KEY:
+  iamRoleStatements: ${file(./providersConfig/aws/iam.yml):iamRoleStatements}
+
+#  environment:
 
 package:
   individually: true
@@ -26,6 +28,8 @@ package:
 
 custom:
   webpackIncludeModules: true
+  stage: ${opt:stage, self:provider.stage}
+  testTableName: test-${self:service}-${self:custom.stage}
 
 plugins:
   - serverless-webpack
@@ -39,3 +43,7 @@ functions:
       - http:
           path: /test
           method: get
+
+resources:
+  Resources:
+    testTable: ${file(./providersConfig/aws/dynamodb.yml):testTable}
