Adding an s3 bucket creation to serverless.yml, added corresponding s3.yml file reference. Moving functions to it's own functions folder inside the aws reference file

--- a/serverless.yml
+++ b/serverless.yml
@@ -36,14 +36,9 @@ plugins:
   - serverless-dynamodb-local
   - serverless-offline
 
-functions:
-  test:
-    handler: src/index.test
-    events:
-      - http:
-          path: /test
-          method: get
+functions: ${file(./providersConfig/aws/functions.yml)}
 
 resources:
   Resources:
     testTable: ${file(./providersConfig/aws/dynamodb.yml):testTable}
+    S3BucketTest: ${file(./providersConfig/aws/s3.yml):S3BucketTest}
