--- a/serverless.yml
+++ b/serverless.yml
@@ -42,3 +42,5 @@ resources:
   Resources:
     testTable: ${file(./providersConfig/aws/dynamodb.yml):testTable}
     S3BucketTest: ${file(./providersConfig/aws/s3.yml):S3BucketTest}
+    CognitoUserPoolTestPoolId: ${file(./providersConfig/aws/cognito.yml):CognitoUserPoolTestPoolId}
+    UserPoolClient: ${file(./providersConfig/aws/cognito.yml):UserPoolClient}
